--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^3.0.1",
     "dotenv": "^6.1.0",
     "firebase": "^5.6.0",
+    "instascan": "^1.0.0",
     "node-isbn": "^1.4.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
