--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "@material-ui/icons": "^3.0.1",
     "dotenv": "^6.1.0",
     "firebase": "^5.6.0",
-    "instascan": "^1.0.0",
+    "instascan-umd": "^1.0.1",
     "node-isbn": "^1.4.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-instascan": "^1.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "recompose": "^0.30.0",
