--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "react-dom": "^16.6.3",
     "react-instascan": "^1.0.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.1",
+    "react-scripts": "^2.1.2",
     "recompose": "^0.30.0",
+    "simple-flexbox": "^1.2.0",
     "typeface-roboto": "0.0.54"
   },
   "scripts": {
