--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-instascan": "^1.0.0",
+    "react-responsive": "^6.0.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.2",
     "recompose": "^0.30.0",
