--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^3.0.1",
     "dotenv": "^6.2.0",
     "firebase": "^5.6.0",
+    "mui-datatables": "^2.0.0-beta-45",
     "quagga": "^0.12.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
@@ -15,7 +16,8 @@
     "react-scripts": "^2.1.2",
     "recompose": "^0.30.0",
     "simple-flexbox": "^1.2.0",
-    "typeface-roboto": "0.0.54"
+    "typeface-roboto": "0.0.54",
+    "xml2js": "^0.4.19"
   },
   "scripts": {
     "start": "react-scripts start",
