--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "@material-ui/core": "^3.6.2",
     "@material-ui/icons": "^3.0.1",
+    "amazon-product-api": "^0.4.4",
     "dotenv": "^6.2.0",
     "firebase": "^5.6.0",
+    "firebase-admin": "^6.4.0",
     "mui-datatables": "^2.0.0-beta-45",
     "quagga": "^0.12.1",
     "react": "^16.6.3",
