--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-bookshelves",
   "version": "0.1.0",
   "private": true,
+  "main": "server.js",
   "dependencies": {
     "@material-ui/core": "^3.6.2",
     "@material-ui/icons": "^3.0.1",
