--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,8 @@ firebase.json
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+#functions
+/functions/node_modules
+/functions/*.env*
+/functions/*.log*
