--- a/.gitignore
+++ b/.gitignore
@@ -24,8 +24,10 @@ firebase.json
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+firebase-debug.log*
 
 #functions
 /functions/node_modules
 /functions/*.env*
 /functions/*.log*
+
