--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "mui-datatables": "^2.0.0-beta-53",
     "quagga": "^0.12.1",
     "react": "^16.7.0",
+    "react-autosuggest": "^9.4.3",
     "react-dom": "^16.7.0",
     "react-responsive": "^6.0.1",
     "react-router-dom": "^4.3.1",
