--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "firebase": "^5.8.1",
     "mui-datatables": "^2.0.0-beta-53",
     "quagga": "^0.12.1",
+    "query-string": "^6.2.0",
     "react": "^16.7.0",
     "react-autosuggest": "^9.4.3",
     "react-dom": "^16.7.0",
