--- a/functions/package.json
+++ b/functions/package.json
@@ -9,10 +9,13 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
+    "domutils": "^1.7.0",
     "firebase-admin": "^6.0.0",
     "firebase-functions": "^2.1.0",
+    "htmlparser2": "^3.10.1",
     "request": "^2.88.0",
     "request-promise": "^4.2.2",
+    "soupselect": "^0.2.0",
     "xml2js": "^0.4.19"
   },
   "private": true
