--- a/package.json
+++ b/package.json
@@ -3,21 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^3.9.0",
-    "@material-ui/icons": "^3.0.2",
-    "dotenv": "^6.2.0",
-    "firebase": "^5.8.1",
-    "mui-datatables": "^2.0.0-beta-53",
+    "@material-ui/core": "^4.0.2",
+    "@material-ui/icons": "^4.0.1",
+    "dotenv": "^8.0.0",
+    "firebase": "^6.1.0",
+    "mui-datatables": "^2.3.0",
     "quagga": "^0.12.1",
-    "query-string": "^6.2.0",
-    "react": "^16.7.0",
+    "query-string": "^6.5.0",
+    "react": "^16.8.6",
     "react-autosuggest": "^9.4.3",
-    "react-dom": "^16.7.0",
-    "react-responsive": "^6.0.1",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "^2.1.3",
+    "react-dom": "^16.8.6",
+    "react-responsive": "^6.1.2",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "^3.0.1",
     "recompose": "^0.30.0",
-    "simple-flexbox": "^1.2.0",
+    "simple-flexbox": "^2.0.0",
     "typeface-roboto": "0.0.54",
     "xml2js": "^0.4.19"
   },
